
appId: io.ionic.starter
---
- launchApp
- assertVisible: "WEB VIEW WITH DEFAULTS"
- tapOn: "WEB VIEW WITH DEFAULTS"
- assertVisible: "Close"
- tapOn: "Close"
- assertVisible: "Blank"